--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,20 @@ body {
     --radius: 0.5rem;
   }
 }
+
+.nav-scroll-border::after {
+  @apply content-[''] w-full h-px absolute bottom-0 bg-neutral-200;
+
+  animation: nav-scroll-border;
+  animation-timeline: scroll();
+  animation-range: 0 100px;
+}
+
+@keyframes nav-scroll-border {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
